# uRustShell

./: .gitignore  README.md
.cargo/: config.toml
doc/: desription.md  diagram.jfif
src/: Cargo.toml
src/application/: Cargo.toml
src/application/src/: cmd_impl.rs  main.rs  shortcut_impl.rs
src/cmd_dispatcher/: Cargo.toml
src/cmd_dispatcher/src/: lib.rs
src/examples/demo_app/: Cargo.toml
src/examples/demo_app/src/: main.rs
src/examples/shell_config/: Cargo.toml
src/examples/shell_config/src/: lib.rs
src/examples/shell_runner/: Cargo.toml
src/examples/shell_runner/src/: lib.rs
src/examples/usercode/: Cargo.toml
src/examples/usercode/src/: commands.rs  lib.rs  shortcuts.rs
src/examples/ushell_config/src/: lib.rs
src/input_parser/: Cargo.toml
src/input_parser/src/: autocomplete.rs  history.rs  lib.rs  parser.rs  raw_mode.rs
src/main/: Cargo.toml
src/main/src/: main.rs
src/shell/: Cargo.toml
src/shell/src/: lib.rs
src/shell_client/: Cargo.toml
src/shell_client/src/: lib.rs
src/shell_config/: Cargo.toml
src/shell_config/src/: lib.rs
src/shell_core/: Cargo.toml
src/shell_core/src/: lib.rs
src/shell_core/src/autocomplete/: mod.rs
src/shell_core/src/history/: mod.rs
src/shell_core/src/input/: buffer.rs  key_reader.rs  mod.rs  parser.rs  renderer.rs
src/shell_core/src/terminal/: mod.rs
src/shell_dispatcher/: Cargo.toml
src/shell_engine/: Cargo.toml
src/shell_input/: Cargo.toml
src/shell_input/src/: lib.rs
src/shell_input/src/terminal/: mod.rs
src/shell_macros/: Cargo.toml
src/shell_macros/src/: lib.rs
src/shell_macros/src/commandsgen/: mod.rs
src/shell_macros/src/shortcutsgen/: mod.rs
src/shell_runner/: Cargo.toml
src/shell_runner/src/: lib.rs
src/shortcut_dispatcher/: Cargo.toml
src/shortcut_dispatcher/src/: lib.rs
src/usercode/: Cargo.toml
src/usercode/src/: commands.cfg  commands.rs
src/ushell/: Cargo.toml
src/ushell/src/: lib.rs
src/ushell2/: Cargo.toml  README.md
src/ushell_dispatcher/: README.md
src/ushell_dispatcher/src/commandsgen/: README.md
src/ushell_dispatcher/src/shortcutsgen/: README.md
src/ushell_input/: Cargo.toml  README.md
src/ushell_input/src/history/: mod.rs
src/ushell_input/src/input/: buffer.rs  parser.rs  renderer.rs
