[workspace]
resolver = "3"
members = [
    "shell_config",
    "shell_core",
    "shell_macros",
    "shell_runner",
    "usercode",
    "main"
]

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = "z"          # Optimize for size ("s" is slightly less aggressive)
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Better optimization at the cost of compile time
strip = true             # Automatically strip symbols (requires nightly or build scripts)
panic = "abort"          # Removes panic messages to reduce binary size

