[workspace]
resolver = "3"
members = [
    "shell_input",
    "shell_dispatcher",
    "shell",
    "examples/demo_app",
    "examples/shell_config",
    "examples/usercode",
]

# Exclude examples from publishing to crates.io
exclude = [
    "examples/*"
]

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link Time Optimization
codegen-units = 1        # Better optimization at the cost of compile time
strip = true             # Strip symbols (requires nightly or build scripts)
panic = "abort"          # Removes panic messages to reduce binary size
