[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
input_parser   = { path = "../input_parser"   }
shortcut_dispatcher = { path = "../shortcut_dispatcher" }
cmd_dispatcher = { path = "../cmd_dispatcher" }


# Optional for logging
defmt = { version = "0.3", optional = true }

[features]
default = []
# Remove bounds checks when parsing arguments (you already enforce arity)
unchecked = []
# Drop PARAM_SPECS/spec_idx to save a bit of flash
no_diagnostics = []
# Use a simpler match for very tiny function sets
simple_lookup = []
# Enable defmt support for DispatchError
defmt = ["dep:defmt"]