[package]
name = "input_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
termios = "0.3.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "wincon", "processenv", "handleapi"] }

[features]
default = ["history-persistence"]
history-persistence = []


[profile.release]
opt-level = "z"          # Optimize for size ("s" is slightly less aggressive)
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Better optimization at the cost of compile time
strip = true             # Automatically strip symbols (requires nightly or build scripts)
panic = "abort"          # Removes panic messages to reduce binary size
