[package]
name = "shell_core"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = "0.9.1"
shell_config = { path = "../shell_config" }

[features]
history-persistence = []
heap-history = []
heap-input-buffer = []


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "wincon", "processenv", "handleapi", "winbase"] }

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"